syntax = "proto3";

option go_package = "./main";

package main;

service CRUD {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
    int32 id = 1;
	string username = 2;
	string password = 3;
	string phone = 4;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    int32 id = 1;
}

message GetUsersRequest {

}

message GetUsersResponse {
    repeated User users = 1;
}

message UpdateUserRequest {
    int32 id = 1;
    string password = 2;
}

message UpdateUserResponse {
    int32 updated = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserResponse {
    int32 deleted = 1;
}